--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,3 +1,16 @@
+.SecondCounter {
+    text-align: center;
+    background-color: cornsilk;
+}
+
+.SecondCounter div {
+    display: inline;
+    background-color: darkcyan;
+    color: azure;
+    font-size: 75px;
+    line-height: 50px;
+    padding: 10px;
+}
 
 /* 
 
